add endpoint get material file
